--- a/package.json
+++ b/package.json
@@ -7,5 +7,18 @@
     "email": "gabrielharukisatoh@gmail.com"
   },
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "prepare": "husky install"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^16.3.0",
+    "@commitlint/config-conventional": "^17.1.0",
+    "husky": "^8.0.1"
+  }
 }
