--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "fix:lint": "eslint --fix --no-error-on-unmatched-pattern",
     "fix:format": "prettier --write",
     "format": "yarn fix:format 'src/**/*.(js|md|json)'",
-    "lint": "yarn fix:lint 'src/**/*.{js,md,json}'"
+    "lint": "yarn fix:lint 'src/**/*.{js,md,json}'",
+    "dev": "nodemon --exec babel-node src/index.js",
+    "prebuild": "rm -rf ./dist",
+    "build": "babel src --extensions \".js\" --ignore \"*.spec.js,*.test.js\" --out-dir dist --copy-files"
   },
   "commitlint": {
     "extends": [
@@ -27,14 +30,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.13",
+    "@babel/node": "^7.18.10",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/preset-env": "^7.18.10",
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^17.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1"
   }
