--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "@koa/router": "^12.0.0",
+    "koa": "^2.13.4"
   }
 }
