--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@
 SERVER_PORT=9901
 
 ## DB
+DB_HOST=localhost
 DB_PORT=9900
 DB_NAME=puf
 DB_USER=
 DB_PASS=
+DB_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
