--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DB_NAME=puf
 DB_USER=
 DB_PASS=
 DB_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
+
+## AUTH
+JWT_SECRET=
