--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@koa/router": "^12.0.0",
     "@prisma/client": "^4.3.1",
     "dotenv-safe": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0"
   }
