--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@koa/router": "^12.0.0",
     "@prisma/client": "^4.3.1",
+    "bcrypt": "^5.0.1",
     "dotenv-safe": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
