--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
+    "jest": "^29.0.3",
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
