--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fix:format": "prettier --write",
     "format": "yarn fix:format 'src/**/*.(js|md|json)'",
     "lint": "yarn fix:lint 'src/**/*.{js,md,json}'",
+    "test": "yarn jest",
     "dev": "nodemon --exec babel-node -- -r dotenv-safe/config src/index.js",
     "prebuild": "rm -rf ./dist",
     "build": "babel src --extensions \".js\" --ignore \"*.spec.js,*.test.js\" --out-dir dist --copy-files"
