--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "supertest": "^6.3.0"
   },
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "@prisma/client": "^4.3.1",
     "bcrypt": "^5.0.1",
